@@ -1,5 +1,12 @@
 2014-10-29  Georg-Johann Lay  <avr@gjlay.de>
 
+	Remove dead -[no-]ticks option.
+
+	* options.def (ticks): Remove.
+	* options.c (USAGE): Adjust.
+
+2014-10-29  Georg-Johann Lay  <avr@gjlay.de>
+
 	Avoid unspecified order when reading GPRs.
 
 	* avrtest.c (CPSE, AND, OR, EOR, CP, CPC, SUB, SBC): Apply get_reg
